--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.mediafire.com/file/79lg2412rbdrfjx/Blue_Light_Filter_Setup.rar/file">Download</a>
+              <a class="nav-link" href="#">Download</a>
             </li>
           </ul>
         </div>
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="big-heading">Blue light filter is the only filter app that your desktop needs.</h1>
-          <a href="https://www.mediafire.com/file/79lg2412rbdrfjx/Blue_Light_Filter_Setup.rar/file" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download</a>
+          <a href="#" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download</a>
         </div>
         <div class="col-lg-6">
           <img class="title-image" src="images/MainIcon.png" alt="iphone-mockup">
