Added new links,about me,changed footer

--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="https://aadityajoshi151.github.io/Portfolio/">About Me</a>
             </li>
           </ul>
         </div>
       </nav>
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Blue light filter is the only filter app that your desktop needs.</h1>
-          <a href="#" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download</a>
+          <h1 class="big-heading">Blue light filter is the only filter app that your desktop needs for keeping your eyes healthy and strain-free.</h1>
+          <a href="https://github.com/Aadityajoshi151/Blue-Light-Filter/releases/download/v1.0/Blue.Light.Filter.Setup.exe" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download Installer (.exe)</a>
+          <a href="https://github.com/Aadityajoshi151/Blue-Light-Filter/releases/download/1.0/Blue.Light.Filter.-.Portable.rar" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download Portable App (.rar)</a>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" src="images/MainIcon.png" alt="iphone-mockup">
+          <img class="title-image" src="images/MainIcon.png" alt="image">
         </div>
   </section>
 
@@ -128,8 +129,8 @@
     </div>
   </section>
   <footer id="footer">
-      <p>© Copyright 2019 Blue Light Filter</p>
-      <p>Aaditya Joshi</p>
+      <p>Blue Light Filter App and Landing Page Made with ❤️ and ☕ By Aaditya Joshi</p>
+      <p>All Rights Reserved</p>
   </footer>
 </body>
 </html>
