--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://aadityajoshi151.github.io/" target="_blank"bout Me</a>
+              <a class="nav-link" href="https://aadityajoshi151.github.io/" target="_blank">About me</a>
             </li>
           </ul>
         </div>
