Counter added and little changes
removed fullstops after every feature
changed eyes feature
changed nav link font
body margin 0
removed testimonials ,pricing css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div id="counter">
+    <a href='https://freehitcounters.org/'>Get free HitCounters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c4e215804b153be3258f7e7afc2e5188c7deb87a'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/741893/t/6"></script>
+  </div>
   <section class="colored-section" id="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -55,12 +59,12 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Easy To Use</h3>
-          <p>So easy to use, even your kid could use it.</p>
+          <p>So easy to use, even your kid could use it</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-eye fa-4x"></i>
           <h3 class="feature-title">Healthy Eyes</h3>
-          <p>Eyes are very important organs of our body. They deserve to be protected.</p>
+          <p>Eyes are very important organs of our body. They deserve care and protection</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-desktop fa-4x"></i>
@@ -70,17 +74,17 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-cogs fa-4x"></i>
           <h3 class="feature-title">Save Settings</h3>
-          <p>Remembers your filter settings for next time.</p>
+          <p>Remembers your filter settings for next time</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-palette fa-4x"></i>
           <h3 class="feature-title">Various Filter Colours</h3>
-          <p>Various colour choices are available to best suit your needs.</p>
+          <p>Various colour choices are available to best suit your needs</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-code fa-4x"></i>
           <h3 class="feature-title">Written in Javascript</h3>
-          <p>One of the most popular languages out there.</p>
+          <p>One of the most popular languages out there</p>
         </div>
   
       </div>
